fix: alignment links added

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -64,6 +64,7 @@
   }
   
   button.submit-button {
+    margin-bottom: 20px;
     margin-top: 20px;
     width: 100%;
     background-color: #8b3dff;
@@ -79,3 +80,6 @@
     background-color: #7528d9;
   }
   
+  #signup-link{
+    text-align: center;
+  }
